<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile"
    tools:context="com.example.ibagn.facebook.Profile">

    <LinearLayout
        android:id ="@+id/Everything"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageView
            android:id="@+id/bkg_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:layout_gravity="top"
            android:background="@drawable/bakg_fb" >
        </ImageView>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="bottom"
                android:padding="@dimen/activity_vertical_margin"
                android:background="@android:color/white"
                >
                <ImageView
                    android:id="@+id/about"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_weight="1.7"
                    android:layout_gravity="bottom"
                    android:background="@drawable/about"
                    android:layout_alignParentLeft="true">
                    </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:layout_below="@+id/about"
                    android:padding="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentLeft="true"
                    />
                <ImageView
                    android:id="@+id/photos"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1.7"
                    android:layout_gravity="bottom"
                    android:background="@drawable/photos" >
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photos"
                    android:layout_below="@+id/photos"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true"
                    />
                <ImageView
                    android:id="@+id/friends"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_weight="1.7"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bakg_fb"
                    android:layout_alignParentRight="true">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend"
                    android:layout_below="@+id/friends"
                    android:padding="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true"
                    />

            </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >
    <ImageView
        android:id="@+id/outline"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:background="@drawable/photo_outline"
        >
    </ImageView>
    <ImageView
        android:id="@+id/img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:background="@drawable/gabi_fb" >

    </ImageView>
    <TextView
        android:id="@+id/usr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/outline"
        android:layout_alignBottom="@+id/outline"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:text="@string/usr_name"
        android:paddingLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge">
    </TextView>
        <Button
            android:id="@+id/btn1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:layout_below="@+id/outline"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:layout_toRightOf="@id/btn1"
            android:layout_below="@+id/outline"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:layout_toRightOf="@id/btn2"

            android:layout_below="@+id/outline"/>
        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/study"
            android:gravity="center"
            android:layout_below="@id/btn1"/>
        <TextView
            android:id="@+id/txt1_fill"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/school"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:layout_below="@id/btn2"
            android:layout_toRightOf="@+id/txt1"/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingBottom="2dp"
            android:gravity="center"
            android:text="@string/work"
            android:layout_below="@id/txt1"/>
        <TextView
            android:id="@+id/txt2_fill"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/company"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@+id/txt2"
            android:layout_below="@id/txt1"/>
        <TextView
            android:id="@+id/txt3"
            android:paddingBottom="2dp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/location"
            android:layout_below="@id/txt2"/>
        <TextView
            android:id="@+id/txt3_fill"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_toRightOf="@+id/txt3"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/adress"
            android:layout_below="@id/txt2"/>
    </RelativeLayout>
</FrameLayout>
